# ChangeLog for games-emulation/ideas-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.3.0.ebuild:
  Bumped.

  06 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.2.9.ebuild:
  Bumped.

  15 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> ideas-bin-1.0.2.8.ebuild:
  Added support for amd64 using emul-linux-x86-gtklibs.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> ideas-bin-1.0.2.8.ebuild:
  Added RESTRICT and QA_EXECSTACK.

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +ideas-bin-1.0.2.8.ebuild:
  Initial ebuild.
