@@ -1,7 +1,3 @@
-DIST ideas-1.0.2.8.tar.bz2 331755 RMD160 329e10af256444c84a143764eb1105e7e1fc7628 SHA1 40f9e79209ec3af7ff672014a093f5f34f0be106 SHA256 3820b29fcc094e1f8b02451ec71477f73b27352ea11a1d0d9b968851bd222c6d
-DIST ideas-1.0.2.9.tar.bz2 332890 RMD160 f9b9825046544276cc1d835d7ff32c02085cac12 SHA1 79bdabaf96c35cb71fd8bf1fcf397d20357b9df4 SHA256 26d1054a808820fc47e0a7299345730da29799213d79b9b6960e78550ff1cad0
-DIST ideas-1.0.3.0.tar.bz2 367186 RMD160 4b07a1760b48e24c81581d3eea0a80f33c53940c SHA1 2fe626a7948b41313ba9412c2fa7879f5f75a584 SHA256 8a22828e5f9dc64fd3691c1689a951b6e14903c8022681d125a38c7468a6c4af
-EBUILD ideas-bin-1.0.2.8.ebuild 989 RMD160 ad314fc28b39cac209e34810351845353c10e440 SHA1 b3903197dd6ae39744fd33c7a3585d91f9b6de3a SHA256 68051abb6c0dbe9509fa648fbd375b7ccdf8a7e1a2ae5b46aefab0402685bc68
-EBUILD ideas-bin-1.0.2.9.ebuild 989 RMD160 ad314fc28b39cac209e34810351845353c10e440 SHA1 b3903197dd6ae39744fd33c7a3585d91f9b6de3a SHA256 68051abb6c0dbe9509fa648fbd375b7ccdf8a7e1a2ae5b46aefab0402685bc68
-EBUILD ideas-bin-1.0.3.0.ebuild 989 RMD160 ad314fc28b39cac209e34810351845353c10e440 SHA1 b3903197dd6ae39744fd33c7a3585d91f9b6de3a SHA256 68051abb6c0dbe9509fa648fbd375b7ccdf8a7e1a2ae5b46aefab0402685bc68
-MISC ChangeLog 638 RMD160 f8f5e5373078a046053c066e32677693c60c0a7b SHA1 b43241057a2644a72586616ad817d8af8f7063bc SHA256 1d0224c6d0a531dd4e251463b6f0e5f1c284f4b1ea8e9dee5e17996ae6e26ce5
+DIST ideas-1.0.3.1.tar.bz2 378031 RMD160 69d4f116fb5a0db4c7858f159944b063a553b538 SHA1 563063bd94c4fa77126a2bc8d09c9e871a15b125 SHA256 4ade83fa32ade140059326f4649680c7640bbb29041d16c03bdde3a4c0b4cfe1
+EBUILD ideas-bin-1.0.3.1.ebuild 1006 RMD160 c137542c0a4e9afbc53a6be32bfaaa3aa41d86f5 SHA1 cc195a4d3e5d24f46492b12eca662c23f1c5f5c9 SHA256 68a95ec6e2c84e9827e9531d2d45d4a1d8488bbf245b0eee7a7a3ed617b162c2
+MISC ChangeLog 825 RMD160 0a271669e9699ee3dc09e06972b5b52108c2c77b SHA1 7715a25bc8e21a42c0ac06034b8c482c941f9f74 SHA256 3a74ff7a3e71193e0e49035438db86980ede0b4d8b5c9baa9a85217a8ca25b07
